--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "user-login-system",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -19,5 +19,8 @@
     "express": "^4.17.3",
     "mongoose": "^6.2.3",
     "nodemon": "^2.0.15"
-  }
+  },
+  "engines": {
+    "node": "16.13.2"
+}
 }
